# mumble-websocket-plugin

./: CMakeLists.txt  plugin.cpp
